DX/dev/force-app/main/default/objects/TestReport__c/TestReport__c.object-meta.xml
<CustomObject>
    <label>レポートテスト用</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>レポートテスト用名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>