DX/dev/force-app/main/default/objects/TestReport__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <label>項目A (円貨)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>