DX/dev/force-app/main/default/objects/TestReport__c/fields/B__c.field-meta.xml
<CustomField>
    <fullName>B__c</fullName>
    <label>項目B(外貨)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>