DX/dev/force-app/main/default/objects/TestReport__c/fields/rate__c.field-meta.xml
<CustomField>
    <fullName>rate__c</fullName>
    <formula>A__c / B__c</formula>
    <label>為替レート</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>