DX/dev/force-app/main/default/objects/TestReport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>A__c</columns>
    <columns>B__c</columns>
    <columns>rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>